k3s/worker.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tubester-worker
  namespace: tubester
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tubester-worker
  template:
    metadata:
      labels:
        app: tubester-worker
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: worker
          image: ghcr.io/kubaak/tubester-worker:latest
          imagePullPolicy: Always
