k3s/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tubester-api
  namespace: tubester
spec:
  selector:
    app: tubester-api
  ports:
    - port: 80
      targetPort: 5000
